# General

./: CMakeLists.txt
include/general/: GeneralConstants.h  Geometry.h  IEnumerable.h  Legendre.h  Mathematics.h  Matrix.h  Matrix3x3.h  Polynom.h  Polynomial.h  Quaternion.h  Times.h  Vector.h  general_constants.h  mathfuncs.h  matrix.h  polynomial.h  quaternion.h  times.h  vector.h
src/: Geometry.cpp  Legendre.cpp  Mathematics.cpp  Matrix.cpp  Matrix3x3.cpp  Polynom.cpp  Polynomial.cpp  Quaternion.cpp  Times.cpp  Vector.cpp  mathfuncs.cpp  matrix.cpp  polynomial.cpp  quaternion.cpp  times.cpp  vector.cpp
test/: Test.cpp  test.cpp
